@@ -1412,6 +1412,9 @@ for instance $(Nv-1)p^{k-1}$, if $p$ is the underlying rational prime. You
 may use other values of \kbd{expo} (see the useful trick in
 \tet{famat_to_nf_modideal_coprime}).
 
+\fun{GEN}{Idealstarprk}{GEN nf, GEN pr, long k, long flag} same as
+\kbd{Idealstar} for $I = \kbd{pr}^k$
+
 \subsec{Class field theory}
 
 Under GP, a class-field theoretic description of a number field is given by a
